完成app管理和审计日志
